# python-intermediate-inflammation

./: .gitignore  README.md  inflammation-analysis.py  pyproject.toml
.github/workflows/: main.yml
inflammation/: compute_data.py  models.py
tests/: test_compute_data.py  test_models.py
